--- a/compass/dev/_postcard.scss
+++ b/compass/dev/_postcard.scss
@@ -9,6 +9,12 @@ body{
 		&.bg-#{$type} {
 			background: $colour;
 			color: $fontColour;
+			#footer{
+				color:$fontColour;
+			}
+			#credits-text{
+				color:$colour
+			}
 		}
 
 		.ic-#{$type} {
@@ -192,18 +198,43 @@ main{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	color:#fff;
 	@include transform(translate(-50%,0));
 
-	> a{
-		float: left;
-		font-size:0.75em;
-		line-height: 1.825em;
-		font-family: $textFontFamily;
 
+	.footer-credits{
+		font-size:0.75em;
+		height: 34px;
+		font-family: $textFontFamily;
+		float: left;
+	}
+
+	#credits-lk {
+		line-height: 34px;
+		display: inline-block;
 		&:hover{
 			border-bottom: 2px solid;
 			margin-bottom: -2px;
+		}
+		&.show + #credits-text{
+			opacity: 1;
+		}
+	}
+
+	#credits-text{
+		opacity: 0;
+		position: absolute;
+		bottom:40px;
+		padding:10px 15px;
+		background: #fff;
+		left:30px;
+		font-size: 1.125em;
+		max-width: 300px;
+		text-align: left;
+		a{
+			text-decoration: underline;
+			&:hover{
+				text-decoration: none;
+			}
 		}
 	}
 
