--- a/compass/dev/_mixins.scss
+++ b/compass/dev/_mixins.scss
@@ -53,7 +53,12 @@
 	}
 
 	#footer{
-		opacity: 0;
+		@if ($transitionDuration){
+			@include transition(opacity $transitionDuration ease-out, color $transitionDuration ease-out)
+		}
+	}
+
+	#credits-text{
 		@if ($transitionDuration){
 			@include transition(opacity $transitionDuration ease-out, color $transitionDuration ease-out)
 		}
@@ -103,6 +108,10 @@
 			#footer{
 				color:$fontColour;
 				opacity: 1;
+			}
+			#credits-text{
+				color:$colour;
+
 			}
 			#final-block {
 				color: $colour;
