Changed inactive colors

--- a/compass/dev/_variables.scss
+++ b/compass/dev/_variables.scss
@@ -1,7 +1,7 @@
 $types: "client", "agence", "prospect", "boss", "comptable-banquier", "famille", "enfants", "belle-famille", "cible-amoureuse", "ex";
 $colours: #b8d4ec, #b9dabb, #d52685, #b2dbd7, #f4b7d1, #d9d7d8, #f8d500, #4f4291, #ea332f, #164164;
 $fontColours: #7e94a5, #889e8a, #a01e65, #86a19f, #c992a8, #b9b9b9, #eab61a, #372d62, #ad2c25, #0e273b;
-$fontColoursInactive: #a0bad0, #a1bda3, #bd2377, #9dbfbc, #e2a7c0, #c6c5c6, #eec012, #44387b, #cf302a, #123551;
+$fontColoursInactive: #a0bad0, #a1bda3, #ab206c, #9dbfbc, #e2a7c0, #c6c5c6, #eec012, #352c60, #b32a24, #102e46;
 $bgImages: "02_client", "01_agence", "09_prospect", "05_boss", "03_banquier", "10_famille", "07_enfants", "06_belle-famille", "08_cible amoureuse", "04_ex";
 $blueTextTitle: #2a00e5;
 $blueTextIcon: #1200ff;
