Added 550px min-height

--- a/public/css/postcard.css
+++ b/public/css/postcard.css
@@ -800,6 +800,7 @@ main .wrapper > div {
   top: 0;
   height: 100%;
   display: table;
+  min-height: 550px;
 }
 #second-step > div {
   display: table-cell;
