--- a/compass/dev/_postcard.scss
+++ b/compass/dev/_postcard.scss
@@ -13,7 +13,11 @@ body{
 				color:$fontColour;
 			}
 			#credits-text{
-				color:$colour
+				color:$colour;
+
+			}
+			.share{
+				color:$colour;
 			}
 		}
 
@@ -175,6 +179,44 @@ main{
 			text-decoration: none;
 			color:inherit;
 		}
+	}
+
+	.share{
+		display: inline-block;
+		width: 320px;
+		margin-top:20px;
+		height: 0;
+		overflow: hidden;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		background: #fff;
+		opacity: 0;
+		@include transition(opacity 0.8s ease-out, height 0.8s ease-out);
+
+		&.go-down{
+			opacity: 1;
+
+			height: 120px;
+		}
+
+		.sub-tit{
+			font-size:1.0em;
+			text-transform: uppercase;
+			margin:27px 0 20px 0;
+			font-weight: bold;
+		}
+
+		a {
+			color: inherit;
+			text-decoration: none;
+			font-size: 1.625em;
+			padding: 0 7px;
+			&:hover{
+				opacity: 0.4;
+			}
+		}
+
 	}
 
 	#greetings-title, #greetings-message, #greetings-website{
