--- a/public/css/postcard.css
+++ b/public/css/postcard.css
@@ -579,6 +579,9 @@ body.bg-client #footer {
 body.bg-client #credits-text {
   color: #b8d4ec;
 }
+body.bg-client .share {
+  color: #b8d4ec;
+}
 body .ic-client {
   background-image: url("../images/02_client_sel.svg");
 }
@@ -590,6 +593,9 @@ body.bg-agence #footer {
   color: #889e8a;
 }
 body.bg-agence #credits-text {
+  color: #b9dabb;
+}
+body.bg-agence .share {
   color: #b9dabb;
 }
 body .ic-agence {
@@ -605,6 +611,9 @@ body.bg-prospect #footer {
 body.bg-prospect #credits-text {
   color: #d52685;
 }
+body.bg-prospect .share {
+  color: #d52685;
+}
 body .ic-prospect {
   background-image: url("../images/09_prospect_sel.svg");
 }
@@ -616,6 +625,9 @@ body.bg-boss #footer {
   color: #86a19f;
 }
 body.bg-boss #credits-text {
+  color: #b2dbd7;
+}
+body.bg-boss .share {
   color: #b2dbd7;
 }
 body .ic-boss {
@@ -631,6 +643,9 @@ body.bg-comptable-banquier #footer {
 body.bg-comptable-banquier #credits-text {
   color: #f4b7d1;
 }
+body.bg-comptable-banquier .share {
+  color: #f4b7d1;
+}
 body .ic-comptable-banquier {
   background-image: url("../images/03_banquier_sel.svg");
 }
@@ -642,6 +657,9 @@ body.bg-famille #footer {
   color: #b9b9b9;
 }
 body.bg-famille #credits-text {
+  color: #d9d7d8;
+}
+body.bg-famille .share {
   color: #d9d7d8;
 }
 body .ic-famille {
@@ -657,6 +675,9 @@ body.bg-enfants #footer {
 body.bg-enfants #credits-text {
   color: #f8d500;
 }
+body.bg-enfants .share {
+  color: #f8d500;
+}
 body .ic-enfants {
   background-image: url("../images/07_enfants_sel.svg");
 }
@@ -668,6 +689,9 @@ body.bg-belle-famille #footer {
   color: #372d62;
 }
 body.bg-belle-famille #credits-text {
+  color: #4f4291;
+}
+body.bg-belle-famille .share {
   color: #4f4291;
 }
 body .ic-belle-famille {
@@ -683,6 +707,9 @@ body.bg-cible-amoureuse #footer {
 body.bg-cible-amoureuse #credits-text {
   color: #ea332f;
 }
+body.bg-cible-amoureuse .share {
+  color: #ea332f;
+}
 body .ic-cible-amoureuse {
   background-image: url("../images/08_cible amoureuse_sel.svg");
 }
@@ -694,6 +721,9 @@ body.bg-ex #footer {
   color: #0e273b;
 }
 body.bg-ex #credits-text {
+  color: #164164;
+}
+body.bg-ex .share {
   color: #164164;
 }
 body .ic-ex {
@@ -884,6 +914,41 @@ main .wrapper > div {
 }
 #second-step .website a.go-up {
   margin-top: 70px;
+}
+#second-step .share {
+  display: inline-block;
+  width: 320px;
+  margin-top: 20px;
+  height: 0;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #fff;
+  opacity: 0;
+  -moz-transition: opacity 0.8s ease-out, height 0.8s ease-out;
+  -o-transition: opacity 0.8s ease-out, height 0.8s ease-out;
+  -webkit-transition: opacity 0.8s ease-out, height 0.8s ease-out;
+  transition: opacity 0.8s ease-out, height 0.8s ease-out;
+}
+#second-step .share.go-down {
+  opacity: 1;
+  height: 120px;
+}
+#second-step .share .sub-tit {
+  font-size: 1.0em;
+  text-transform: uppercase;
+  margin: 27px 0 20px 0;
+  font-weight: bold;
+}
+#second-step .share a {
+  color: inherit;
+  text-decoration: none;
+  font-size: 1.625em;
+  padding: 0 7px;
+}
+#second-step .share a:hover {
+  opacity: 0.4;
 }
 #second-step #greetings-title, #second-step #greetings-message, #second-step #greetings-website {
   overflow: visible;
