--- a/compass/dev/_postcard.scss
+++ b/compass/dev/_postcard.scss
@@ -192,6 +192,8 @@ main{
 		box-sizing: border-box;
 		background: #fff;
 		opacity: 0;
+		position: relative;
+		z-index: 2;
 		@include transition(opacity 0.8s ease-out, height 0.8s ease-out);
 
 		&.go-down{
